@@ -1,11 +1,11 @@
 package com.example.Loark.Controller;
 
 import com.example.Loark.DTO.PartyMemberResponse;
-import com.example.Loark.Entity.Party;
-import com.example.Loark.Entity.PartyMember;
-import com.example.Loark.Entity.User;
+import com.example.Loark.Entity.*;
+import com.example.Loark.Entity.Character;
+import com.example.Loark.Repository.CharacterRepository;
+import com.example.Loark.Repository.CharacterSpecRepository;
 import com.example.Loark.Repository.PartyRepository;
-import com.example.Loark.Service.PartyMemberMapper;
 import com.example.Loark.Service.PartyMemberService;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
@@ -13,8 +13,12 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 
+import java.math.BigDecimal;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/parties/{partyId}/members")
@@ -23,6 +27,8 @@ public class PartyMemberController {
 
     private final PartyMemberService service;
     private final PartyRepository parties;
+    private final CharacterRepository characterRepository;
+    private final CharacterSpecRepository characterSpecRepository;
 
     @Data
     static class AddMemberRequest {
@@ -36,8 +42,48 @@ public class PartyMemberController {
         Party party = parties.findById(partyId)
                 .orElseThrow(() -> new IllegalArgumentException("공대를 찾을 수 없습니다."));
         List<PartyMember> all = service.list(partyId);
-        var dto = all.stream().map(m -> PartyMemberMapper.toDto(m, party)).toList();
-        return ResponseEntity.ok(dto);
+        List<PartyMemberResponse> dtoList = all.stream()
+                .map(member -> toMemberDto(member, party.getOwner().getUserId()))
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(dtoList);
+    }
+
+    private PartyMemberResponse toMemberDto(PartyMember member, Long ownerId) {
+        User user = member.getUser();
+        String mainCharacterName = user.getMainCharacter();
+        String server = null;
+        BigDecimal itemLevel = null;
+        String characterClass = null;
+
+        if (mainCharacterName != null && !mainCharacterName.isBlank()) {
+            Optional<Character> characterOpt = characterRepository.findByName(mainCharacterName);
+            if (characterOpt.isPresent()) {
+                Character character = characterOpt.get();
+                server = character.getServer();
+                characterClass = character.getClazz();
+
+                // 최신 스펙에서 아이템 레벨 조회 (메서드 이름 수정)
+                Optional<CharacterSpec> specOpt = characterSpecRepository.findFirstByCharacterCharacterIdOrderByUpdatedAtDesc(character.getCharacterId());
+                if (specOpt.isPresent()) {
+                    itemLevel = specOpt.get().getItemLevel();
+                }
+            }
+        }
+
+        return PartyMemberResponse.builder()
+                .userId(user.getUserId())
+                .displayName(user.getDisplayName())
+                .pictureUrl(user.getPictureUrl())
+                .subparty(member.getSubparty())
+                .role(member.getRole())
+                .joinedAt(member.getJoinedAt() != null ? member.getJoinedAt().format(DateTimeFormatter.ISO_OFFSET_DATE_TIME) : null)
+                .leftAt(member.getLeftAt() != null ? member.getLeftAt().format(DateTimeFormatter.ISO_OFFSET_DATE_TIME) : null)
+                .owner(user.getUserId().equals(ownerId))
+                .mainCharacterName(mainCharacterName)
+                .server(server)
+                .itemLevel(itemLevel)
+                .characterClass(characterClass)
+                .build();
     }
 
     /** 멤버 즉시 추가 (공대장만) */
